<resources>
    <string name="app_name">Ethnicity Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="name_label">Please enter your name</string>
    <string name="start_button">Start</string>
    <string name="name_hint">Name</string>
    <string name="result_label">Result</string>
    <string name="congratulations_label">Congratulations!</string>
    <string name="score_statement">Your Score is %1$d out of %2$d</string>
    <string name="question_count">%1$d/%2$d</string>
    <string name="finish_button">Finish</string>
    <string name="question_label">Which ethnic group is it?</string>
    <string name="submit_button">Submit</string>
    <string name="quiz_image">QuizImage</string>
    <string name="next_button">Next</string>
</resources>