<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/form_box"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginVertical="8dp"
            android:text="@string/name_label"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
            app:layout_constraintStart_toStartOf="@+id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/name_hint"
            app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
            app:layout_constraintStart_toStartOf="@+id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/purple_500"
            android:paddingVertical="12dp"
            android:text="@string/start_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
            app:layout_constraintStart_toStartOf="@+id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_textfield" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>