<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.quizapp.viewmodel.QuizViewModel" />
        <variable
            name="maxNoOfQuiz"
            type="Integer" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="8dp"
        tools:context=".ui.ResultFragment">

        <TextView
            android:id="@+id/result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/result_label"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/trophy_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/congratulations_label"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:maxHeight="250dp"
            android:paddingStart="10dp"
            android:src="@drawable/trophy" />

        <TextView
            android:id="@+id/congratulations_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/congratulations_label"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/congratulations_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.name}"
            tools:text="David Scott"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_label"
            android:layout_centerHorizontal="true"
            android:text="@{@string/score_statement(viewModel.score, maxNoOfQuiz)}"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="Your score is 8 out of 8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:text="@string/finish_button"
            android:textColor="@color/purple_500"
            android:textSize="18sp" />

    </RelativeLayout>

</layout>